Pods/firefox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: firefox-pod
  namespace: brijesh
  labels:
    app: firefox
spec:
  containers:
    - name: firefox-container
      image: linuxserver/firefox
      ports:
        - containerPort: 3000
